--- a/sass/_EntryDetails.sass
+++ b/sass/_EntryDetails.sass
@@ -9,10 +9,10 @@ entry-details
     animation: 1s fade-in 1
     display: block
   .entry
-    +size(75rem, 90vh)
+    +size(75rem)
     +rounded-corners()
     display: block
-    margin: 5vh auto
+    margin: 0 auto
     position: relative
     overflow-y: scroll
     header
@@ -40,8 +40,8 @@ entry-details
         color: white
         text-decoration: none
     .albums
-      +size(69rem, calc(90vh - 42.5rem))
-      +position(fixed, 36.5rem)
+      +size(69rem, calc(90vh - 32.2rem))
+      margin-top: 32.2rem
       background-color: white
       padding: 3rem
       overflow-y: scroll
