--- a/sass/_SearchBox.sass
+++ b/sass/_SearchBox.sass
@@ -33,6 +33,7 @@ search-box
     input[type="search"]
       +size(48.6rem, 4rem)
       border: none
+      -webkit-appearance: none
       font: 1.6em/4rem $font-montserrat
       outline: none
 
